# 476Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt
ext/: zlibd.lib
ext/glfw/debug/: Makefile
ext/glfw/debug/src/: Makefile
ext/imgui/: imgui_impl_opengl3.cpp
resources/: dir_frag.glsl  dir_vert.glsl  part_vert.glsl  pass_vert.glsl  point_frag.glsl  point_frag_BP.glsl  point_vert.glsl  point_vert_BP.glsl  shadow_frag.glsl  shadow_frag_BP.glsl  shadow_vert.glsl  shadow_vert_BP.glsl  sist_dn.tga  skybox_frag.glsl  skybox_vert.glsl  tex_frag.glsl  tex_fragH.glsl  up.tga
resources/Animated Cow/Animation/: Chewing.anim  Cow Avatar Mask.mask  Cow.controller  Idle.anim  Moo.anim  Tail Swipe.anim  Walk.anim
resources/Animated Cow/Demo Scenes/: Demo Scene.unity
resources/Animated Cow/Models/Materials/: Cow Horn and Hoofs.mat  Cow Skin.mat  Cow Tail Tip.mat  Cow.mat  Demo Walls.mat  Eye Lens.mat  Eye Texture.mat  Horns and Hoffs Texture.mat  Skin Texture.mat  Tail Tip Normal Map.mat
resources/Animated Cow/Models/Normal Maps/.mayaSwatches/: Tail Tip Normal Map.png_hcm.swatch
resources/Animated Cow/Models/Textures/.mayaSwatches/: Cow.png_hcm.swatch  Eye Texture.png_hcm.swatch  Horns and Hoffs Texture.png_hcm.swatch  Skin Texture.png_hcm.swatch
resources/Animated Cow/Prefabs/: Cow.prefab
resources/Audio/: Moo.xmp
resources/Maps/: Map2PSD.psd  MapPSD.psd
resources/Models/: Cow.mtl
resources/Models/CowWalkv1/: step3.mtl
src/: GLTextureWriter.cpp  GLTextureWriter.h  GOBarn.cpp  GOBarn.h  GOBorder.cpp  GOBorder.h  GOCow.cpp  GOCow.h  GOHaybale.cpp  GOHaybale.h  GOMothership.cpp  GOMothership.h  GOTree.cpp  GOTree.h  GOid.h  GameObject.cpp  GameObject.h  GamePlayer.cpp  GamePlayer.h  Ground.cpp  Ground.h  Interpolator.h  Material.cpp  Material.h  MatrixStack.cpp  MatrixStack.h  Model.cpp  Model.h  Particle.cpp  Particle.h  Program.cpp  QuadTree.cpp  QuadTree.h  Shader.h  Shape.cpp  Shape.h  SkyBox.cpp  SkyBox.h  TextRenderer.h  Texture.cpp  (+8 more)
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
